src/test/ui/parser/lex-bad-char-literals-4.rs
//
// This test needs to the last one appearing in this file as it kills the parser
static c: char =
    'â—  //~ ERROR: character literal may only contain one codepoint
;
